finish render API sp ridepatview

--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -147,7 +147,7 @@
             $('#wait').show();
             $.ajax({
                 dataType: "json",
-                url: "WebService.asmx/GetRidePatViewByTimeFilter_Gilad",
+                url: "WebService.asmx/Get_unityRide_ByTimeRange",
                 contentType: "application/json; charset=utf-8",
                 beforeSend: function (xhr) {
                     xhr.setRequestHeader("Content-Encoding", "gzip");
@@ -166,6 +166,7 @@
             $('#wait').hide();
             data = JSON.parse(data.d);
             timeFilteredArr = data; // run over the exist and set new value to the entire page
+            console.log('first Check -->', timeFilteredArr);
             refreshTable();
         }
 
@@ -207,10 +208,82 @@
             alert("Error in getCoors: " + e.responseText);
         }
 
+        //make the flat object to complex object like the old API
+        const CustomRideObject = (thisRide) => {
+
+            let CustomObj = {};
+            CustomObj.RidePatNum = thisRide.RidePatNum;
+            CustomObj.Status = thisRide.Status;
+            CustomObj.Remark = thisRide.Remark;
+            CustomObj.OnlyEscort = thisRide.OnlyEscort;
+            CustomObj.LastModified = thisRide.LastModified;
+            CustomObj.Date = thisRide.PickupTime;
+
+            CustomObj.Pat = {};
+            CustomObj.Pat.DisplayName = thisRide.PatientName;
+            CustomObj.Pat.Id = thisRide.PatientId;
+            CustomObj.Pat.DisplayNameA = ''
+            CustomObj.Pat.EnglishName = ''
+            CustomObj.Pat.PatientIdentity = 0;
+            CustomObj.Pat.Equipment = thisRide.PatientEquipments == null ? [] : thisRide.PatientEquipments;
+            CustomObj.Pat.IsAnonymous = thisRide.IsAnonymous;
+            CustomObj.Pat.RidePatPatientStatus = {};
+            CustomObj.Pat.RidePatPatientStatus.Status = (thisRide.PatientStatus == "" || thisRide.PatientStatus == "Not Finished") ? -1 : 1;
+            CustomObj.Pat.RidePatPatientStatus.EditTimeStamp = thisRide.PatientStatusEditTime
+
+            CustomObj.Pat.EscortedList = [];
+            CustomObj.Escorts = [];
+            //for (var i = 0; i < thisRide[18].Value.length; i++) {
+            //    let oneEscort = {}
+            //    oneEscort.Id = thisRide[18].Value[i][0].Value;
+            //    oneEscort.DisplayName = thisRide[18].Value[i][1].Value;
+            //    CustomObj.Escorts.push(oneEscort);
+            //}
+            for (var i = 0; i < thisRide.AmountOfEscorts; i++) {
+                let oneEscort = {}
+                oneEscort.Id = 0
+                oneEscort.DisplayName = ''
+                CustomObj.Pat.EscortedList.push(oneEscort);
+            }
+
+            for (var i = 0; i < thisRide.AmountOfEscorts; i++) {
+                let oneEscort = {}
+                oneEscort.Id = 0
+                oneEscort.DisplayName = ''
+                CustomObj.Escorts.push(oneEscort);
+            }
+
+            CustomObj.Drivers = [];
+            let Maindriver = {};
+            Maindriver.DisplayName = thisRide.DriverName;
+            Maindriver.Id = thisRide.MainDriver;
+            Maindriver.CellPhone = thisRide.DriverCellPhone
+            CustomObj.Drivers.push(Maindriver);
+            if (Maindriver.Id == null || Maindriver.Id == -1) {
+                CustomObj.Drivers = [];
+            }
+
+            CustomObj.Destination = {};
+            CustomObj.Destination.Name = thisRide.Destination
+            CustomObj.Origin = {};
+            CustomObj.Origin.Name = thisRide.Origin;
+
+            CustomObj.Pat.Barrier = {}
+            CustomObj.Pat.Hospital = {}
+            CustomObj.Pat.Barrier.Name = CustomObj.Destination.Name;
+            CustomObj.Pat.Hospital.Name = CustomObj.Origin.Name;
+
+            CustomObj.Coordinator = {};
+            CustomObj.Coordinator.DisplayName = thisRide.CoorName
+            CustomObj.Coordinator.Id = thisRide.CoorId
+
+            return CustomObj;
+        }
+
         function refreshTable() {
             //this function doesnt changeing timeFilteredArr or fetching data from the back-end
             $('#wait').show();
-            setTimeout(() => { $('#wait').hide() }, 3000);
+            setTimeout(() => { $('#wait').hide() }, 1000);
 
 
             checkCookie();
@@ -232,10 +305,19 @@
             GENERAL.RIDEPAT.setRidePatList(JSON.stringify(timeFilteredArr));
 
             for (i in timeFilteredArr) {
-                if (timeFilteredArr[i].Pat.DisplayName.includes("אנונימי")) {
-                    timeFilteredArr[i].Pat.DisplayName = "חולה";
+
+                if (i==10) {
+                    console.log('before custom', timeFilteredArr[i])
                 }
-                thisRidePatDate = convertDBDate2FrontEndDate(timeFilteredArr[i].Date);
+                let CustomObj = CustomRideObject(timeFilteredArr[i]);
+                if (i == 10) {
+                    console.log('after custom', CustomObj)
+
+                }
+                if (CustomObj.Pat.DisplayName.includes("אנונימי")) {
+                    CustomObj.Pat.DisplayName = "חולה";
+                }
+                thisRidePatDate = convertDBDate2FrontEndDate(CustomObj.Date);
                 thisRidePatDate = adjustDateFormat(thisRidePatDate);
 
                 ////Change date format
@@ -243,12 +325,12 @@
                 //temp = temp.substring(0, temp.indexOf(")"));
                 //var date = new Date(parseInt(temp));
 
-                if (timeFilteredArr[i].Drivers.length != 0) {
-                    driverName = timeFilteredArr[i].Drivers[0].DisplayName;
+                if (CustomObj.Drivers.length != 0) {
+                    driverName = CustomObj.Drivers[0].DisplayName;
                 }
-                destinationName = timeFilteredArr[i].Destination.Name;
-                originName = timeFilteredArr[i].Origin.Name;
-                patientName = timeFilteredArr[i].Pat.DisplayName;
+                destinationName = CustomObj.Destination.Name;
+                originName = CustomObj.Origin.Name;
+                patientName = CustomObj.Pat.DisplayName;
 
                 //if (date.getDate() < 10) {
                 //    day = "0" + date.getDate();
@@ -277,22 +359,22 @@
 
                 if (unassigned) {
                     // $("#activeRidePats").prop('checked', false);
-                    if (timeFilteredArr[i].Status != "ממתינה לשיבוץ") continue;
+                    if (CustomObj.Status != "ממתינה לשיבוץ") continue;
                 }
 
                 if (showDeleted) {
 
-                    if (timeFilteredArr[i].Status !== "נמחקה") continue;
+                    if (CustomObj.Status !== "נמחקה") continue;
 
                 } else {
-                    if (timeFilteredArr[i].Status == "בוטלה" || timeFilteredArr[i].Status == "הסתיימה" || timeFilteredArr[i].Status == 'נמחקה') continue;
+                    if (CustomObj.Status == "בוטלה" || CustomObj.Status == "הסתיימה" || CustomObj.Status == 'נמחקה') continue;
                     //בוטלה and הסתיימה are from old times -- not sure if needed anymore
 
                 }
 
 
                 if (myRidePats) {
-                    if (timeFilteredArr[i].Coordinator.DisplayName != currentCoor) continue;
+                    if (CustomObj.Coordinator.DisplayName != currentCoor) continue;
                 }
 
 
@@ -302,7 +384,7 @@
                 /*
                  BACK IN TIME ONLY THE CREATOR OF A RIDEPAT COULD EDIT || DELETE NOW EVERY ONE CAN. YOGEV 05/05/2021
                  
-                let checkBoxStr = timeFilteredArr[i].Coordinator.DisplayName === currentCoor ?
+                let checkBoxStr = CustomObj.Coordinator.DisplayName === currentCoor ?
                     '<input class="checkBoxes" type="checkbox" onchange=RowChecked(this) />' :
                     '<input type="checkbox" disabled />';
                 */
@@ -317,10 +399,10 @@
                      4. pass rp only
                      */
 
-                    if (timeFilteredArr[i].Coordinator.DisplayName != currentCoor) continue;
-                    if (timeFilteredArr[i].Status !== "ממתינה לשיבוץ") continue;
-                    if (!timeFilteredArr[i].Pat.IsAnonymous) continue;
-                    ridePatDate = timeFilteredArr[i].Date;
+                    if (CustomObj.Coordinator.DisplayName != currentCoor) continue;
+                    if (CustomObj.Status !== "ממתינה לשיבוץ") continue;
+                    if (!CustomObj.Pat.IsAnonymous) continue;
+                    ridePatDate = CustomObj.Date;
                     ridePatDate = parseInt(ridePatDate.substring(ridePatDate.indexOf("(") + 1, ridePatDate.indexOf(")")));
                     if (ridePatDate > Date.now()) continue;
                 }
@@ -329,9 +411,9 @@
                 var btnStr = "";
                 if (!showDeleted) {
 
-                    var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' name='" + timeFilteredArr[i].RidePatNum + "' title='צפייה'><i class='fa fa-wpforms'></i></button>";
-                    var editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' name='" + timeFilteredArr[i].RidePatNum + "' title='עריכה'><i class='ti-pencil'></i></button>";
-                    var deleteBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' name='" + timeFilteredArr[i].RidePatNum + "' title='מחיקה'><i class='fa fa-remove' ></i></button>";
+                    var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' name='" + CustomObj.RidePatNum + "' title='צפייה'><i class='fa fa-wpforms'></i></button>";
+                    var editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' name='" + CustomObj.RidePatNum + "' title='עריכה'><i class='ti-pencil'></i></button>";
+                    var deleteBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' name='" + CustomObj.RidePatNum + "' title='מחיקה'><i class='fa fa-remove' ></i></button>";
                     //btnStr += " " + showBtn;
 
 
@@ -349,39 +431,39 @@
 
                     btnStr = editBtn += " " + deleteBtn;
                 } else {
-                    let recoverBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='recover' name='" + timeFilteredArr[i].RidePatNum + "' title='שחזור'><i class='ti-share-alt'></i></button>";
+                    let recoverBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='recover' name='" + CustomObj.RidePatNum + "' title='שחזור'><i class='ti-share-alt'></i></button>";
                     btnStr = recoverBtn;
                 }
 
 
 
                 let ridePat = {};
-                if (timeFilteredArr[i].Status == "ממתינה לשיבוץ") {
+                if (CustomObj.Status == "ממתינה לשיבוץ") {
 
                     ridePat = {
-                        ridePatNum: timeFilteredArr[i].RidePatNum,
+                        ridePatNum: CustomObj.RidePatNum,
                         checkBox: checkBoxStr,
-                        PatDisplayName: timeFilteredArr[i].Pat.DisplayName,
-                        OriginName: timeFilteredArr[i].Origin.Name,
-                        DestinationName: timeFilteredArr[i].Destination.Name,
+                        PatDisplayName: CustomObj.Pat.DisplayName,
+                        OriginName: CustomObj.Origin.Name,
+                        DestinationName: CustomObj.Destination.Name,
                         Date: thisRidePatDate,
-                        Drivers: timeFilteredArr[i].Status,
-                        Origin_Dest: timeFilteredArr[i].Origin.EnglishName + " - " + timeFilteredArr[i].Destination.EnglishName,
-                        Coordinator: timeFilteredArr[i].Coordinator.DisplayName,
+                        Drivers: CustomObj.Status,
+                        Origin_Dest: CustomObj.Origin.Name + " - " + CustomObj.Destination.Name,
+                        Coordinator: CustomObj.Coordinator.DisplayName,
                         Buttons: btnStr,
                         IsAnonymous: '',
-                        LastModified: convertDBDate2FrontEndDate(timeFilteredArr[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
+                        LastModified: convertDBDate2FrontEndDate(CustomObj.LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
                     }
                 }
                 else {
-                    for (j in timeFilteredArr[i].Drivers) {
-                        if (timeFilteredArr[i].Drivers[j].DriverType == "Primary") var primary = timeFilteredArr[i].Drivers[j].DisplayName + " " + timeFilteredArr[i].Drivers[j].CellPhone;
+                    for (j in CustomObj.Drivers) {
+                        if (CustomObj.Drivers[j].DriverType == "Primary") var primary = CustomObj.Drivers[j].DisplayName + " " + CustomObj.Drivers[j].CellPhone;
                         //  else secondary = timeFilteredArr[i].Drivers[j].DisplayName + " " + timeFilteredArr[i].Drivers[j].CellPhone;
                     }
                     var drivers = "";
-                    if (timeFilteredArr[i].Drivers.length == 1) {
-                        if (primary != undefined) //Only a primary driver is assigned
-                            drivers = "ראשי: " + primary;
+                    if (CustomObj.Drivers.length > 0) {
+
+                        drivers = CustomObj.Drivers[0].DisplayName + ' - ' + CustomObj.Drivers[0].CellPhone
                         //else //only a secondary driver is assigned
                         //    drivers = "גיבוי בלבד: " + secondary;
                     }
@@ -390,18 +472,18 @@
                     var buttons = btnStr;
 
                     ridePat = {
-                        ridePatNum: timeFilteredArr[i].RidePatNum,
+                        ridePatNum: CustomObj.RidePatNum,
                         checkBox: checkBoxStr,
-                        PatDisplayName: timeFilteredArr[i].Pat.DisplayName,
-                        OriginName: timeFilteredArr[i].Origin.Name,
-                        DestinationName: timeFilteredArr[i].Destination.Name,
+                        PatDisplayName: CustomObj.Pat.DisplayName,
+                        OriginName: CustomObj.Origin.Name,
+                        DestinationName: CustomObj.Destination.Name,
                         Date: thisRidePatDate,
                         Drivers: drivers,
-                        Coordinator: timeFilteredArr[i].Coordinator.DisplayName,
-                        Origin_Dest: timeFilteredArr[i].Origin.EnglishName + " - " + timeFilteredArr[i].Destination.EnglishName,
+                        Coordinator: CustomObj.Coordinator.DisplayName,
+                        Origin_Dest: CustomObj.Origin.Name + " - " + CustomObj.Destination.Name,
                         Buttons: buttons,
-                        IsAnonymous: timeFilteredArr[i].Pat.IsAnonymous,
-                        LastModified: convertDBDate2FrontEndDate(timeFilteredArr[i].LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
+                        IsAnonymous: CustomObj.Pat.IsAnonymous,
+                        LastModified: convertDBDate2FrontEndDate(CustomObj.LastModified).toLocaleString('he-IL', { dateStyle: "short", timeStyle: "short" })
                     }
                 }
 
