--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -166,14 +166,14 @@
             $('#wait').hide();
             data = JSON.parse(data.d);
             timeFilteredArr = data; // run over the exist and set new value to the entire page
-            console.log('first Check -->', timeFilteredArr);
+            //console.log('first Check -->', timeFilteredArr);
             refreshTable();
         }
 
         const ImportDataByTimeFilters_ECB = (data) => {
             $('#wait').hide();
             alert('error in ImportDataByTimeFilters');
-            //console.log(data);
+            console.log(data);
 
         }
 
@@ -306,14 +306,14 @@
 
             for (i in timeFilteredArr) {
 
-                if (i==10) {
-                    console.log('before custom', timeFilteredArr[i])
-                }
+                //if (i==10) {
+                //    console.log('before custom', timeFilteredArr[i])
+                //}
                 let CustomObj = CustomRideObject(timeFilteredArr[i]);
-                if (i == 10) {
-                    console.log('after custom', CustomObj)
+                //if (i == 10) {
+                //    console.log('after custom', CustomObj)
 
-                }
+                //}
                 if (CustomObj.Pat.DisplayName.includes("אנונימי")) {
                     CustomObj.Pat.DisplayName = "חולה";
                 }
@@ -570,6 +570,7 @@
         const MarkAsRemoved_FewRidePats = () => {
 
             let txt2post = `האם אתם בטוחים? האם למחוק את כל ${ridePatNums2MarkDeleted.length} ההסעות שנבחרו ברשימה המוצגת לפניך?`;
+            txt2post+='\nשים לב נסיעות אנונימיות שטרם שובצו יימחקו לציתות'
             swal({
                 title: "האם אתם בטוחים?",
                 text: txt2post,
@@ -585,10 +586,10 @@
                     $('#wait').show();
                     $.ajax({
                         dataType: "json",
-                        url: "WebService.asmx/ChangeArrayOF_RidePatStatuses",
+                        url: "WebService.asmx/deleteUnityRide",
                         contentType: "application/json; charset=utf-8",
                         type: "POST",
-                        data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: ridePatNums2MarkDeleted, clientUTCTimeStemp: new Date().toUTCString() }),
+                        data: JSON.stringify({ ListIDs: ridePatNums2MarkDeleted }),
                         success: function (data) {
                             $('#wait').hide();
                             swal({
@@ -603,7 +604,7 @@
                                 ridePatNums2MarkDeleted = [];
                                 $('#deleteFewRidePatsBtn').prop('disabled', true)
                                 ImportDataByTimeFilters();
-                            }, 1001);//literally means go fetch new data from server side with the same time frame
+                            }, 250);//literally means go fetch new data from server side with the same time frame
                         },
                         error: function (err) {
                             $('#wait').hide();
@@ -729,6 +730,13 @@
 
         }
 
+        // Function to find an object with a specific attribute value
+        function findObjectByAttribute(array, attribute, value) {
+            return array.find(function (obj) {
+                return obj[attribute] === value;
+            });
+        }
+
         function buttonsEvents() {
 
             $(".dataTables_empty").html("אין הסעות");
@@ -828,6 +836,7 @@
 
             $('#datatable-buttons tbody').on('click', '#recover', function () { RecoverRidePat(this); });
 
+
             const MarkRidePatAsRemoved = (thisBtn) => {
 
                 let ridePatNum = thisBtn.name;
@@ -845,6 +854,16 @@
                 let deleteMe = [];
                 deleteMe.push(ridePatNum);
 
+                let ThisUnityRide = findObjectByAttribute(timeFilteredArr, 'RidePatNum', parseInt(ridePatNum))
+
+                //console.log('RidePat : ', ThisUnityRide, ridePatNum, timeFilteredArr);
+                let addWarningText = (ThisUnityRide.IsAnonymous) && (ThisUnityRide.MainDriver == -1) ? `\nנסיעה זו תמחק לצמיתות ולא יהיה ניתן לשחזר` : '';
+
+
+
+                
+                txt2post += addWarningText;
+
                 swal({
                     title: "האם אתם בטוחים?",
                     text: txt2post,
@@ -860,13 +879,12 @@
                         $('#wait').show();
                         $.ajax({
                             dataType: "json",
-                            url: "WebService.asmx/ChangeArrayOF_RidePatStatuses",
+                            url: "WebService.asmx/deleteUnityRide",
                             contentType: "application/json; charset=utf-8",
                             type: "POST",
-                            data: JSON.stringify({ newStatus: 'נמחקה', ridePatNums: deleteMe, clientUTCTimeStemp: new Date().toUTCString() }),
+                            data: JSON.stringify({ UnityRideID: ridePatNum }),
                             success: function (data) {
                                 $('#wait').hide();
-                                refreshTable();
                                 swal({
                                     title: "ההסעה סומנה כמחוקה 🗑️",
                                     timer: 1000,
@@ -874,11 +892,11 @@
                                     showConfirmButton: false
                                 });
                                 //right after
-                                setTimeout(function () { ImportDataByTimeFilters() }, 1001);//literally means go fetch new data from server side with the same time frame
+                                setTimeout(function () { ImportDataByTimeFilters() }, 250);//literally means go fetch new data from server side with the same time frame
                             },
                             error: function (err) {
                                 $('#wait').hide();
-                                alert("Error in deleteRidePat:" + err.responseText);
+                                alert("Error in deleteUnityRide:" + err.responseText);
                             }
                         });
 
